rewrote notecard styles to standardize icon layout and fix spacing when changed to editing mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-
-*,
+import *,
 *::after,
 *::before {
   margin: 0;
@@ -16,8 +14,7 @@ a {
 html {
   font-size: 62.5%;
   height: 100vh;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Work Sans";
 }
 
 body {
@@ -34,7 +31,7 @@ body {
   min-height: -webkit-fill-available;
 }
 .layout__main {
-  margin-top: 8rem;
+  margin-top: 2rem;
   height: calc(100% - 8rem);
   /* overflow: scroll; */
 }
